--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -39,6 +39,7 @@
     --color-black7: #0C0B09;
 
     --color-white: #FFFFFF;
+    --color-white1: #F0E2D1;
 
     --color-lion: #C59457;
     --color-copper: #B86E29;
@@ -64,7 +65,7 @@ body {
     min-width: 320px;
     min-height: 100vh;
     max-width: 100vw;
-    background-color: var(--color-black7);
+    background-color: var(--color-black6);
 }
 
 h1 {
