--- a/src/common/Header/header.css
+++ b/src/common/Header/header.css
@@ -2,67 +2,34 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    padding-left: 6.125rem;
-    padding-right: 6.125rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     border-bottom: 1px solid var(--color-black1);
 }
 
 .header__logo {
     display: flex;
     align-items: center;
-    padding-top: 1.75rem;
-    padding-bottom: 1.75rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     user-select: none;
     cursor: pointer;
 }
-.header__logo img {
+.logo-title {
+    font-size: var(--font-size20);
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+.logo-icon {
     width: 75px;
     height: 75px;
     border-radius: 50%;
+    margin-right: var(--font-size10);
 }
-
-.header__header-navigation {
-    display: flex;
-    align-items: center;
-}
-
-.header-navigation__navigation-tab {
-    margin-right: 54px;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: center;
-    height: 100%;
-}
-.header-navigation__navigation-tab:last-child {
-    margin-right: 0px;
-}
-.navigation-tab__title {
-    color: var(--color-black1);
-    font-size: var(--font-size18);
-    font-weight: 500;
-    cursor: pointer;
-    margin-bottom: 24px;
-    user-select: none;
-}
-.navigation-tab__title--active {
-    color: var(--color-white);
-    font-size: var(--font-size18);
-}
-
-.navigation-tab__active-underline {
-    display: flex;
-    justify-self: center;
-    width: 24px;
-    height: 4px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    background: var(--color-gradient1);
-    box-shadow: 0 0 30px 0 #e0d4ff;
-}
-.navigation-tab__inactive-underline {
-    width: 24px;
-    height: 4px;
+.logo-icon img {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
 }
 
 .header__header-connect-wallet {
