--- a/src/common/RouteLayout/route-layoute.css
+++ b/src/common/RouteLayout/route-layoute.css
@@ -5,6 +5,11 @@
     min-height: 100vh;
     flex-direction: column;
 }
+main {
+    padding-top: 2rem;
+    padding-left: 3rem;
+    min-height: calc(100vh - 3rem);
+}
 .content {
     flex: 1;
 }
