--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,8 +25,10 @@
     --font-size20: 1.25rem; /* 20px */
     --font-size22: 1.375rem; /* 22px */
     --font-size26: 1.625rem; /* 26px */
+    --font-size28: 1.75rem; /* 28px */
+    --font-size30: 1.875rem; /* 30px */
 
-    --color-grey0: #76768F;
+    --color-grey0: #898580;
     --color-grey4: #34343E;
 
     --color-black0: #5B5248;
@@ -45,9 +47,9 @@
     --color-copper: #B86E29;
     --color-ecru: #DCB376;
 
-    --color-green: #20B55C;
+    --color-green: #99c794;
 
-    --color-red: #F53535;
+    --color-red: #FF7474;
 
     --color-purple: #BE97F2;
 }
