--- a/src/commonComponents/Tabs/tabs.css
+++ b/src/commonComponents/Tabs/tabs.css
@@ -8,22 +8,27 @@
     display: flex;
 }
 .tab {
-    background: var(--color-black6);
+    background: var(--color-white1);
+    color: var(--color-black4);
     font-size: var(--font-size16);
     font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 5.1875rem;
+    width: auto;
+    min-width: 5rem;
     height: 1.875rem;
     border-radius: 5px;
+    padding: 2px 10px;
     margin-right: 15px;
     cursor: pointer;
     user-select: none;
+    transition: 0.2s;
 }
 
 .tab--active {
-    background: var(--color-gradient1);
+    background: var(--color-ecru);
+    box-shadow: 0 0 15px 0 var(--color-ecru);
     color: var(--color-black6);
 }
 .additional-tab-content {
