added misa files mf

--- a/src/common/RouteLayout/route-layoute.css
+++ b/src/common/RouteLayout/route-layoute.css
@@ -6,10 +6,8 @@
     flex-direction: column;
 }
 main {
-    padding-top: 2rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
     min-height: calc(100vh - 3rem);
+    height: calc(100vh - 3rem);
 }
 .content {
     flex: 1;
