--- a/src/components/Auth/Login/login.css
+++ b/src/components/Auth/Login/login.css
@@ -5,6 +5,7 @@
     justify-content: center;
     width: 600px;
     height: 300px;
+    margin-top: 50px;
     background: var(--color-white);
     padding: 20px;
     border-radius: 10px;
