--- a/src/pages/ModulePage/ModulePage.css
+++ b/src/pages/ModulePage/ModulePage.css
@@ -1,3 +1,12 @@
 .module-page {
     height: 100%;
 }
+.module-page__module-iframe {
+    width: 100%;
+    height: 100%;
+}
+.module-iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
